force-app/main/default/objects/Invoice_Item__c/fields/ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemDescription__c</fullName>
    <description>Description of the invoice item</description>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>