force-app/main/default/objects/Invoice_Item__c/fields/Line_No__c.field-meta.xml
<CustomField>
    <fullName>Line_No__c</fullName>
    <externalId>true</externalId>
    <label>Line No</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>