force-app/main/default/objects/Invoice_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>