force-app/main/default/objects/Invoice_Item__c/fields/Price_After_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_After_VAT__c</fullName>
    <label>Price After VAT</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>