force-app/main/default/objects/Invoice_Item__c/fields/Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sqft__c</fullName>
    <description>Square feet for invoice item</description>
    <label>Sqft</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>