force-app/main/default/objects/Invoice_Item__c/fields/Sqm__c.field-meta.xml
<CustomField>
    <fullName>Sqm__c</fullName>
    <description>Square meters for invoice item</description>
    <label>Sqm</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>