force-app/main/default/objects/Invoice_Item__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>