force-app/main/default/objects/Invoice_Item__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <formula>IF(
    ISBLANK(Product__r.Warranty__c),
    &quot;&quot;,
    IF(
        ((YEAR(TODAY()) - YEAR(Invoice__r.Invoice_Date__c)) * 12 +
        (MONTH(TODAY()) - MONTH(Invoice__r.Invoice_Date__c)))  &gt;  Product__r.Warranty__c,
        &quot;Out of Warranty&quot;,
        &quot;In Warranty&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty_Status</label>
    <type>Text</type>
</CustomField>