force-app/main/default/objects/Invoice_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Item_Code__c</columns>
    <columns>Invoice__c</columns>
    <columns>Quantity__c</columns>
    <columns>Invoice_No__c</columns>
    <columns>Warehouse_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>